--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,13 +13,26 @@ jobs:
     strategy:
       matrix:
         xcode:
-          - '16.4'
+          - '16.1'
 
     name: macOS
     runs-on: macos-15
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Select Xcode ${{ matrix.xcode }}
         run: sudo xcode-select -s /Applications/Xcode_${{ matrix.xcode }}.app
-      - name: Run tests
-        run: make test-ci
+      - name: List available simulators
+        run: xcrun simctl list devices available --json | jq '.devices | keys[]'
+      - name: Set simulator configuration
+        run: |
+          # Use iPhone 16 Pro Max with iOS 18.6 for consistency
+          echo "SIMULATOR_NAME=iPhone 16 Pro Max" >> $GITHUB_ENV
+          echo "IOS_VERSION=18.6" >> $GITHUB_ENV
+          
+          echo "Selected Simulator: iPhone 16 Pro Max with iOS 18.6"
+      - name: Run tests on iPhone 16 Pro Max iOS 18.6
+        run: |
+          set -o pipefail && \
+          xcodebuild test \
+          -scheme ZPTooltip \
+          -destination "platform=iOS Simulator,name=$SIMULATOR_NAME,OS=$IOS_VERSION"
